# p2pvpn

./: Cargo.toml  README.md
contract/: .binpath  Cargo.toml  README.md  build.rs
contract/app/: Cargo.toml
contract/app/proxies/: japan.ovpn  korea.ovpn  russia.ovpn  thailand.ovpn  usa.ovpn
contract/app/src/: lib.rs
contract/client/: Cargo.toml  build.rs  p_2_pvpn_contract_client.idl  shadowsprout_contract_client.idl
contract/client/src/: lib.rs  p_2_pvpn_contract_client.rs  shadowsprout_contract_client.rs
contract/src/: lib.rs
contract/tests/: gtest.rs
src/: contract.rs  main.rs  tui.rs  vpn.rs
