[package]
name = "ratatui-vpn"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
rand = "0.8"
tempfile = "3"
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "time",
    "process",
] }
