[workspace]
members = ["contract"]

[workspace.package]
version = "0.1.0"
authors = ["Gear Technologies"]
edition = "2024"
rust-version = "1.91"
license = "MIT"
repository = "https://github.com"
keywords = ["gear", "sails", "smart-contracts", "wasm", "no-std"]
categories = ["cryptography::cryptocurrencies", "no-std", "wasm"]

[workspace.dependencies]
sails-rs = { version = "0.10.2", features = ["ethexe"] }
tokio = "1.48.0"
p2pvpn-contract-app = { version = "0.1.0", path = "contract/app" }
p2pvpn-contract-client = { version = "0.1.0", path = "contract/client" }

[package]
name = "ratatui-vpn"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
rand = "0.8"
tempfile = "3"
tokio = { version = "1", features = [
  "macros",
  "rt-multi-thread",
  "time",
  "process",
] }
p2pvpn-contract-client.workspace = true
sails-rs.workspace = true
