[workspace]
members = ["contract"]

[workspace.package]
version = "0.1.0"
authors = ["Gear Technologies"]
edition = "2024"
rust-version = "1.91"
license = "MIT"
repository = "https://github.com"
keywords = ["gear", "sails", "smart-contracts", "wasm", "no-std"]
categories = ["cryptography::cryptocurrencies", "no-std", "wasm"]

[workspace.dependencies]
sails-rs = { version = "0.10.2", features = ["ethexe"] }
tokio = "1.48.0"
shadowsprout-contract = { version = "0.1.0", path = "contract" }
shadowsprout-contract-app = { version = "0.1.0", path = "contract/app" }
shadowsprout-contract-client = { version = "0.1.0", path = "contract/client" }

[package]
name = "shadowsprout"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = "1.6.3"
ratatui = "0.29"
crossterm = "0.28"
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
blake2 = "0.10"
rand = "0.8"
tempfile = "3"
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "time",
    "process",
] }
shadowsprout-contract.workspace = true
shadowsprout-contract-client.workspace = true
sails-rs.workspace = true
ethexe-sdk = { git = "https://github.com/gear-tech/gear.git" }
ethexe-ethereum = { git = "https://github.com/gear-tech/gear.git" }
gsigner = { git = "https://github.com/gear-tech/gear.git" }
gprimitives = { git = "https://github.com/gear-tech/gear.git" }
ethexe-common = { git = "https://github.com/gear-tech/gear.git" }
directories = "6.0.0"
